# dodeca

./: .gitignore  CHANGELOG.md  Cargo.toml  DEVELOP.md  README.md  README.md.in  build.rs  dist-workspace.toml  install.ps1  install.sh
.claude/: CLAUDE.md
.claude/commands/: bench.md  check.md  clippy.md  fix.md  fmt.md  handoff.md  merge.md  pickup.md  pr.md  push.md  report.md  tests.md
.config/: dodeca.kdl
.config/captain/readme-templates/: readme-footer.md  readme-header.md
.facet-dev-templates/: readme-footer.md  readme-header.md
.github/: FUNDING.yml  build-setup.yml
.github/workflows/: ci.yml  release.yml  test.yml  website.yml
browser-tests/: package-lock.json  package.json  playwright.config.ts
browser-tests/lib/: test-site.ts
browser-tests/standalone-patch-test/: test.html
browser-tests/tests/: livereload.spec.ts  standalone-patch.spec.ts
cells/cell-arborium/: Cargo.toml
cells/cell-arborium/src/: main.rs
cells/cell-code-execution/: Cargo.toml
cells/cell-code-execution-proto/: Cargo.toml
cells/cell-code-execution-proto/src/: lib.rs
cells/cell-code-execution/src/: impl.rs  main.rs
cells/cell-css/: Cargo.toml
cells/cell-css/src/: main.rs
cells/cell-dialoguer/: Cargo.toml
cells/cell-dialoguer-proto/: Cargo.toml
cells/cell-dialoguer-proto/src/: lib.rs
cells/cell-dialoguer/src/: main.rs
cells/cell-fonts/: Cargo.toml
cells/cell-fonts/src/: main.rs
cells/cell-gingembre/: Cargo.toml
cells/cell-gingembre/src/: main.rs
cells/cell-html/: Cargo.toml
cells/cell-html-diff/: Cargo.toml
cells/cell-html-diff/src/: main.rs
cells/cell-html-proto/src/: lib.rs
cells/cell-html/src/: main.rs
cells/cell-http/: Cargo.toml
cells/cell-http-proto/src/: lib.rs
cells/cell-http/src/: devtools.rs  main.rs  tunnel.rs
cells/cell-image/: Cargo.toml
cells/cell-image/src/: main.rs
cells/cell-js/: Cargo.toml
cells/cell-js/src/: main.rs
cells/cell-jxl/: Cargo.toml
cells/cell-jxl/src/: main.rs
cells/cell-linkcheck/: Cargo.toml
cells/cell-linkcheck/src/: main.rs
cells/cell-markdown/: Cargo.toml
cells/cell-markdown-proto/src/: lib.rs
cells/cell-markdown/src/: main.rs
cells/cell-minify/: Cargo.toml
cells/cell-minify/src/: main.rs
cells/cell-pagefind/: Cargo.toml
cells/cell-pagefind/src/: main.rs
cells/cell-pikru/: Cargo.toml
cells/cell-pikru-proto/: Cargo.toml
cells/cell-pikru-proto/src/: lib.rs
cells/cell-pikru/src/: main.rs
cells/cell-sass/: Cargo.toml
cells/cell-sass/src/: main.rs
cells/cell-svgo/: Cargo.toml
cells/cell-svgo/src/: main.rs
cells/cell-tui/: Cargo.toml
cells/cell-tui-proto/src/: lib.rs
cells/cell-tui/src/: main.rs
cells/cell-webp/: Cargo.toml
cells/cell-webp/src/: main.rs
crates/bearmark/: BEARMARK.md  Cargo.toml
crates/bearmark/src/: frontmatter.rs  handler.rs  handlers.rs  headings.rs  lib.rs  render.rs  reqs.rs  rules.rs
crates/dodeca/: Cargo.toml  build.rs
crates/dodeca-baseline/: Cargo.toml
crates/dodeca-code-execution/: Cargo.toml
crates/dodeca-code-execution-config/: Cargo.toml
crates/dodeca-code-execution-config/src/: lib.rs
crates/dodeca-code-execution-types/: Cargo.toml
crates/dodeca-code-execution-types/src/: lib.rs
crates/dodeca-code-execution/src/: lib.rs
crates/dodeca-css/: Cargo.toml
crates/dodeca-css/src/: lib.rs
crates/dodeca-debug/: Cargo.toml
crates/dodeca-debug/src/: lib.rs
crates/dodeca-devtools/: Cargo.toml
crates/dodeca-devtools/src/: lib.rs  state.rs
crates/dodeca-fonts/: Cargo.toml
crates/dodeca-fonts/src/: lib.rs
crates/dodeca-html-diff/: Cargo.toml
crates/dodeca-html-diff/src/: lib.rs
crates/dodeca-image/: Cargo.toml
crates/dodeca-image/src/: lib.rs
crates/dodeca-integration/: Cargo.toml
crates/dodeca-integration/src/: lib.rs
crates/dodeca-integration/tests/: serve.rs
crates/dodeca-js/: Cargo.toml
crates/dodeca-js/src/: lib.rs
crates/dodeca-jxl/: Cargo.toml
crates/dodeca-jxl/src/: lib.rs
crates/dodeca-linkcheck/: Cargo.toml
crates/dodeca-linkcheck/src/: lib.rs
crates/dodeca-minify/: Cargo.toml
crates/dodeca-minify/src/: lib.rs
crates/dodeca-mod-http/src/: devtools.rs  main.rs
crates/dodeca-pagefind/: Cargo.toml
crates/dodeca-pagefind/src/: lib.rs
crates/dodeca-protocol/: Cargo.toml
crates/dodeca-protocol/src/: lib.rs
crates/dodeca-sandbox/: Cargo.toml
crates/dodeca-sandbox/src/: config.rs  lib.rs  linux.rs  macos.rs
crates/dodeca-sass/: Cargo.toml
crates/dodeca-sass/src/: lib.rs
crates/dodeca-serve-protocol/src/: lib.rs
crates/dodeca-svgo/: Cargo.toml
crates/dodeca-svgo/src/: lib.rs
crates/dodeca-syntax-highlight-protocol/: Cargo.toml
crates/dodeca-syntax-highlight-protocol/src/: lib.rs
crates/dodeca-syntax-highlight-rapace/: Cargo.toml
crates/dodeca-syntax-highlight-rapace/src/: main.rs  syntax_highlight.rs
crates/dodeca-syntax-highlight/src/: lib.rs
crates/dodeca-webp/: Cargo.toml
crates/dodeca-webp/src/: lib.rs
crates/dodeca/benches/: ansi_to_html.rs  link_checker.rs  template.rs
crates/dodeca/src/: boot_state.rs  cas.rs  cell_server.rs  cells.rs  config.rs  content_service.rs  data.rs  db.rs  file_watcher.rs  image.rs  init.rs  lib.rs  link_checker.rs  main.rs  (+16 more)
crates/gingembre/: Cargo.toml
crates/html-diff-tests/: Cargo.toml
crates/integration-tests/: Cargo.toml
crates/livereload-client/: Cargo.toml
crates/plugcard/: Cargo.toml
crates/plugcard-macros/: Cargo.toml
docs/: design-lazy-data-loading.md
docs/content/: _index.md
docs/templates/: base.html  index.html  page.html  section.html
mods/mod-arborium/: Cargo.toml
mods/mod-arborium-proto/: Cargo.toml
mods/mod-http/: Cargo.toml
mods/mod-http-proto/: Cargo.toml
scripts/: release.sh  update-homebrew.sh
src/: cas.rs  config.rs  db.rs  file_watcher.rs  image.rs  lib.rs  link_checker.rs  logging.rs  main.rs  plugins.rs  queries.rs  render.rs  serve.rs  theme.rs  tui.rs
src/template/: ast.rs  lexer.rs  parser.rs  render.rs
tests/: serve_integration.rs
tests/serve/: main.rs  section_pages.rs
xtask/: Cargo.toml  README.md  README.md.in
xtask/src/: ci.rs  main.rs
(+58 files in other folders)
