[package]
name = "xtask"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
publish = false

[dependencies]
# CI generation
facet = { git = "https://github.com/facet-rs/facet", features = ["indexmap"] }
facet-yaml = { git = "https://github.com/facet-rs/facet" }
indexmap = "2"
structstruck = "0.4"

# Utilities
camino = "1"
fs-err = "3"
miette = { version = "7", features = ["fancy"] }
