[package]
name = "xtask"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
publish = false

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
# CI generation
facet = { version = "0.32.2", features = ["indexmap"] }
facet-yaml = "0.32.2"
indexmap = "2"
structstruck = "0.4"

# Utilities
camino = "1"
fs-err = "3"
miette = { version = "7", features = ["fancy"] }
