[package]
name = "xtask"
version = "0.6.1"
edition = "2024"
rust-version = "1.91"
publish = false

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
camino.workspace = true
facet = { workspace = true, features = ["indexmap"] }
facet-args.workspace = true
facet-yaml.workspace = true
fs-err.workspace = true
indexmap.workspace = true
miette.workspace = true
owo-colors.workspace = true
structstruck.workspace = true
