[package]
name = "cell-arborium"
version = "0.6.1"
edition = "2024"
rust-version = "1.91"
description = "Syntax highlighting plugin for dodeca using rapace"
license = "MIT OR Apache-2.0"
publish = false

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[[bin]]
name = "ddc-cell-arborium"
path = "src/main.rs"

[dependencies]
arborium.workspace = true
cell-arborium-proto = { path = "../cell-arborium-proto" }
rapace-cell.workspace = true
tokio.workspace = true
