[package]
name = "cell-css"
version = "0.6.1"
edition = "2024"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[[bin]]
name = "ddc-cell-css"
path = "src/main.rs"

[dependencies]
cell-css-proto = { path = "../cell-css-proto" }
lightningcss.workspace = true
rapace-cell.workspace = true
tokio.workspace = true
