[package]
name = "cell-html-diff"
version = "0.6.1"
edition = "2024"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[[bin]]
name = "ddc-cell-html-diff"
path = "src/main.rs"

[dependencies]
cell-html-diff-proto = { path = "../cell-html-diff-proto" }
dodeca-protocol = { path = "../../crates/dodeca-protocol" }
html-diff-tests = { path = "../../crates/html-diff-tests" }
rapace-cell.workspace = true
tokio.workspace = true
tracing.workspace = true
