[package]
name = "cell-html"
version = "0.6.1"
edition = "2024"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[[bin]]
name = "ddc-cell-html"
path = "src/main.rs"

[dependencies]
cell-html-proto = { path = "../cell-html-proto" }
color-eyre.workspace = true
html5ever.workspace = true
lol_html.workspace = true
markup5ever_rcdom.workspace = true
rapace-cell.workspace = true
tokio.workspace = true
