[package]
name = "cell-http"
version = "0.6.1"
edition = "2024"
rust-version = "1.91"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[[bin]]
name = "ddc-cell-http"
path = "src/main.rs"

[dependencies]
axum.workspace = true
cell-http-proto = { path = "../cell-http-proto" }
futures-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
rapace = { workspace = true, features = ["stream"] }
rapace-cell.workspace = true
tokio.workspace = true
tracing.workspace = true
