[package]
name = "cell-image"
version = "0.6.1"
edition = "2024"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[[bin]]
name = "ddc-cell-image"
path = "src/main.rs"

[dependencies]
base64.workspace = true
cell-image-proto = { path = "../cell-image-proto" }
image.workspace = true
rapace-cell.workspace = true
thumbhash.workspace = true
tokio.workspace = true
