[package]
name = "cell-linkcheck"
version = "0.6.1"
edition = "2024"
rust-version = "1.91"
description = "External link checking plugin for dodeca"
license = "MIT OR Apache-2.0"
publish = false

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[[bin]]
name = "ddc-cell-linkcheck"
path = "src/main.rs"

[dependencies]
cell-linkcheck-proto = { path = "../cell-linkcheck-proto" }
rapace-cell.workspace = true
reqwest.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
