[package]
name = "cell-minify"
version = "0.6.1"
edition = "2024"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[[bin]]
name = "ddc-cell-minify"
path = "src/main.rs"

[dependencies]
cell-minify-proto = { path = "../cell-minify-proto" }
rapace-cell.workspace = true
tokio.workspace = true
