[package]
name = "cell-pagefind"
version = "0.6.1"
edition = "2024"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[[bin]]
name = "ddc-cell-pagefind"
path = "src/main.rs"

[dependencies]
cell-pagefind-proto = { path = "../cell-pagefind-proto" }
pagefind.workspace = true
rapace-cell.workspace = true
tokio.workspace = true
