[package]
name = "cell-pikru"
version = "0.6.1"
edition = "2024"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[[bin]]
name = "ddc-cell-pikru"
path = "src/main.rs"

[dependencies]
cell-pikru-proto = { path = "../cell-pikru-proto" }
pikru = { git = "https://github.com/bearcove/pikru", rev = "014afb3" }
rapace-cell.workspace = true
tokio.workspace = true
