[package]
name = "cell-sass"
version = "0.6.1"
edition = "2024"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[[bin]]
name = "ddc-cell-sass"
path = "src/main.rs"

[dependencies]
cell-sass-proto = { path = "../cell-sass-proto" }
grass.workspace = true
rapace-cell.workspace = true
tokio.workspace = true
