[package]
name = "cell-svgo"
version = "0.6.1"
edition = "2024"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[[bin]]
name = "ddc-cell-svgo"
path = "src/main.rs"

[dependencies]
cell-svgo-proto = { path = "../cell-svgo-proto" }
rapace-cell.workspace = true
svag.workspace = true
tokio.workspace = true
