[package]
name = "cell-tui"
version = "0.6.1"
edition = "2024"
rust-version = "1.91"
description = "TUI plugin for dodeca serve mode"
license = "MIT OR Apache-2.0"
publish = false

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[[bin]]
name = "ddc-cell-tui"
path = "src/main.rs"

[dependencies]
cell-tui-proto = { path = "../cell-tui-proto" }
color-eyre.workspace = true
crossterm.workspace = true
futures.workspace = true
rapace = { workspace = true, features = ["stream"] }
rapace-cell.workspace = true
ratatui.workspace = true
tokio.workspace = true
