[package]
name = "cell-webp"
version = "0.6.1"
edition = "2024"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[[bin]]
name = "ddc-cell-webp"
path = "src/main.rs"

[dependencies]
cell-webp-proto = { path = "../cell-webp-proto" }
rapace-cell.workspace = true
tokio.workspace = true
webp.workspace = true
