[package]
name = "bearmark"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Markdown rendering with pluggable code block handlers"
repository = "https://github.com/bearcove/dodeca"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[features]
default = []
# Syntax highlighting via arborium (tree-sitter based)
highlight = ["dep:arborium"]
# ASCII art to SVG conversion
aasvg = ["dep:aasvg"]
# Pikchr diagram rendering
pikru = ["dep:pikru"]
# All handlers
all-handlers = ["highlight", "aasvg", "pikru"]

[dependencies]
# Markdown parsing
pulldown-cmark.workspace = true

# Frontmatter parsing
facet.workspace = true
facet-toml.workspace = true
facet-yaml.workspace = true
facet-value.workspace = true

# Error handling
thiserror.workspace = true

# Regex for stripping markers
regex.workspace = true

# Optional handlers
arborium = { workspace = true, optional = true }
aasvg = { workspace = true, optional = true }
pikru = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
facet-postcard.workspace = true
