[package]
name = "dodeca-baseline"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
description = "Baseline plugin for dodeca - simple transforms for testing"
license = "MIT OR Apache-2.0"
publish = false

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
plugcard = { path = "../plugcard" }
# Needed directly because proc-macro derives reference their crates by name
linkme = "0.3"
postcard-schema = { version = "0.1", features = ["derive", "alloc"] }
