[package]
name = "dodeca-code-execution-config"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
description = "Shared configuration types for dodeca code execution"
license = "MIT OR Apache-2.0"
publish = false

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
facet = "0.32.2"
facet-kdl = "0.32.2"
