[package]
name = "dodeca-code-execution-types"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
description = "Shared types for dodeca code execution plugin interface"
license = "MIT OR Apache-2.0"
publish = false

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
facet = "0.32.2"

# Re-export config types
dodeca-code-execution-config = { path = "../dodeca-code-execution-config" }
