[package]
name = "dodeca-code-execution"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
description = "Code sample execution plugin for dodeca"
license = "MIT OR Apache-2.0"
publish = false

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
plugcard = { path = "../plugcard" }
dodeca-code-execution-types = { path = "../dodeca-code-execution-types" }
facet = "0.32.2"
facet-json = "0.32.2"
linkme = "0.3"
pulldown-cmark = "0.13"
# TODO: Replace blake3 with facet-compatible hashing crate